--- a/机器学习/逻辑回归/02_logistic_chip.ipynb
+++ b/机器学习/逻辑回归/02_logistic_chip.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ca6f53bb",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "469ba909",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "4  0.183760  0.93348     0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "58c5f268",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "27f822e4",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0d451e2b",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a3fdb638",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b14b6156",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/homebrew/anaconda3/lib/python3.10/site-packages/pandas/core/arraylike.py:402: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/Users/keke/anaconda3/lib/python3.10/site-packages/pandas/core/arraylike.py:402: RuntimeWarning: invalid value encountered in sqrt\n",
       "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
      ]
     },
@@ -350,17 +350,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "094410ac",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 0 1 1 1 1 1 1 1 1 0 0 1 0 1 1 1 1 1 1 0 1 1 1 1 1 0 0 1 1 0 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 1 0 0 0 1 1 0 1 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 1 1 0 0 0\n",
+      " 0 0 0 1 0 0 1]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.8135593220338984"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,6 +378,7 @@
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "y_predict = lr.predict(X_new)\n",
+    "print(y_predict)\n",
     "accuracy1 = accuracy_score(y, y_predict)\n",
     "accuracy1"
    ]
@@ -385,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b568a1b1",
    "metadata": {},
    "outputs": [],
@@ -401,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d52834df",
    "metadata": {},
    "outputs": [
@@ -416,9 +427,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c7/lftx3rv14f7bp083tf_7d2c00000gn/T/ipykernel_36428/1968121878.py:5: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/var/folders/7b/4jf6mjss6jq_7yl3_d5d0t_h0000gn/T/ipykernel_31107/1968121878.py:5: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X2_new_boundary1 = (-b+np.sqrt(b*b-4*a*c))/(2*a)\n",
-      "/var/folders/c7/lftx3rv14f7bp083tf_7d2c00000gn/T/ipykernel_36428/1968121878.py:6: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/var/folders/7b/4jf6mjss6jq_7yl3_d5d0t_h0000gn/T/ipykernel_31107/1968121878.py:6: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X2_new_boundary2 = (-b-np.sqrt(b*b-4*a*c))/(2*a)\n"
      ]
     }
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "639917e7",
    "metadata": {},
    "outputs": [
@@ -472,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "a2141349",
    "metadata": {},
    "outputs": [],
@@ -483,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "5758b376",
    "metadata": {},
    "outputs": [
@@ -491,9 +502,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c7/lftx3rv14f7bp083tf_7d2c00000gn/T/ipykernel_36428/1968121878.py:5: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/var/folders/7b/4jf6mjss6jq_7yl3_d5d0t_h0000gn/T/ipykernel_31107/1968121878.py:5: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X2_new_boundary1 = (-b+np.sqrt(b*b-4*a*c))/(2*a)\n",
-      "/var/folders/c7/lftx3rv14f7bp083tf_7d2c00000gn/T/ipykernel_36428/1968121878.py:6: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/var/folders/7b/4jf6mjss6jq_7yl3_d5d0t_h0000gn/T/ipykernel_31107/1968121878.py:6: RuntimeWarning: invalid value encountered in sqrt\n",
       "  X2_new_boundary2 = (-b-np.sqrt(b*b-4*a*c))/(2*a)\n"
      ]
     }
@@ -510,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "ead0b06c",
    "metadata": {},
    "outputs": [
