update: 可视化常用方法

--- a/工具篇/模型评估/数学方法/混淆矩阵.md
+++ b/工具篇/模型评估/数学方法/混淆矩阵.md
@@ -1,7 +1,7 @@
 # 混淆矩阵
 
 在PyTorch中，您可以使用sklearn库中的confusion_matrix函数来计算混淆矩阵。
-<img src='./混淆矩阵.png' width='400' />
+<img src='../混淆矩阵.png' width='400' />
 
 ```python
 
